Modernize atomix-storage path management
Use java.nio.file.Path in most places, so we have a more modern
interface.

Change-Id: I6c42a9f88102063961af7615a12372f6372cfa89
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>